Avoid cropping images

--- a/shopify-product/src/components/BrowseProductsModal/styles.module.css
+++ b/shopify-product/src/components/BrowseProductsModal/styles.module.css
@@ -47,7 +47,9 @@
 .product__image {
   display: block;
   padding-top: 100%;
-  background-size: cover;
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
   background-color: var(--light-bg-color);
 }
 
